<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/history_menu_newgame"
        android:icon="@drawable/ic_action_newgame"
        android:title="@string/new_game"
        app:showAsAction="ifRoom|withText">
    </item>

    <item
        android:id="@+id/history_menu_preferences"
        android:icon="@drawable/ic_action_preferences"
        android:title="@string/preferences"
        app:showAsAction="ifRoom|withText">
    </item>

    <item
        android:id="@+id/history_menu_delete_all"
        android:icon="@drawable/ic_action_delete_all"
        android:title="@string/delete_records"
        app:showAsAction="ifRoom|withText">
    </item>

    <item
        android:id="@+id/history_menu_quit"
        android:icon="@drawable/ic_action_quit"
        android:title="@string/quit"
        app:showAsAction="ifRoom|withText">
    </item>

</menu>